--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -49,7 +49,7 @@
 .friendMessageText {
     font-size: 14px;
     color: #444;
-    white-space: pre-wrap;
+    white-space: normal;
     word-wrap: break-word;
 }
 
