--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,59 +1,59 @@
-.message {
-    display: flex;
-    align-items: flex-start;
-    margin: 10px 0;
-}
+/*.message {*/
+/*    display: flex;*/
+/*    align-items: flex-start;*/
+/*    margin: 10px 0;*/
+/*}*/
 
-.imageAndText {
-    display: flex;
-    align-items: center;
-}
+/*.imageAndText {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*}*/
 
-.imageAndText img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 2px solid #ccc;
-    margin-right: 10px;
-}
+/*.imageAndText img {*/
+/*    width: 50px;*/
+/*    height: 50px;*/
+/*    border-radius: 50%;*/
+/*    object-fit: cover;*/
+/*    border: 2px solid #ccc;*/
+/*    margin-right: 10px;*/
+/*}*/
 
-.text {
-    background-color: #d1e7ff; /* Светло-голубой фон */
-    padding: 10px 15px;
-    border-radius: 10px;
-    max-width: 60%;
-    position: relative;
-}
+/*.text {*/
+/*    background-color: #d1e7ff; !* Светло-голубой фон *!*/
+/*    padding: 10px 15px;*/
+/*    border-radius: 10px;*/
+/*    max-width: 60%;*/
+/*    position: relative;*/
+/*}*/
 
-.text:after {
-    content: '';
-    position: absolute;
-    top: 10px;
-    left: -10px;
-    width: 0;
-    height: 0;
-    border-right: 10px solid #d1e7ff;
-    border-top: 5px solid transparent;
-    border-bottom: 5px solid transparent;
-}
+/*.text:after {*/
+/*    content: '';*/
+/*    position: absolute;*/
+/*    top: 10px;*/
+/*    left: -10px;*/
+/*    width: 0;*/
+/*    height: 0;*/
+/*    border-right: 10px solid #d1e7ff;*/
+/*    border-top: 5px solid transparent;*/
+/*    border-bottom: 5px solid transparent;*/
+/*}*/
 
-.name {
-    font-weight: bold;
-    color: #333;
-    margin-bottom: 5px;
-}
+/*.name {*/
+/*    font-weight: bold;*/
+/*    color: #333;*/
+/*    margin-bottom: 5px;*/
+/*}*/
 
-.messageText {
-    font-size: 14px;
-    color: #444;
-    white-space: normal;
-    word-wrap: break-word;
-}
+/*.messageText {*/
+/*    font-size: 14px;*/
+/*    color: #444;*/
+/*    white-space: normal;*/
+/*    word-wrap: break-word;*/
+/*}*/
 
-.time {
-    font-size: 12px;
-    color: gray;
-    align-self: flex-end;
-    margin-left: 10px;
-}
+/*.time {*/
+/*    font-size: 12px;*/
+/*    color: gray;*/
+/*    align-self: flex-end;*/
+/*    margin-left: 10px;*/
+/*}*/
