--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,42 +1,48 @@
-/*.sendForm {*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: space-between;*/
-/*    gap: 10px;*/
-/*    margin-top: 15px;*/
-/*    padding: 10px;*/
-/*    background: #f5f5f5;*/
-/*    border-radius: 10px;*/
-/*}*/
+.sendForm {
+    /* background-color: #f38585; */
+    width: 100%;
+    min-height: 40px;
+    display: flex;
+    align-items: flex-end;
+    gap: 40px;
+    padding: 30px 0;
 
-/*.textarea {*/
-/*    flex: 1;*/
-/*    min-height: 40px;*/
-/*    padding: 10px;*/
-/*    border: 2px solid #ccc;*/
-/*    border-radius: 8px;*/
-/*    resize: none; !* Отключаем изменение размера *!*/
-/*    font-size: 14px;*/
-/*    outline: none;*/
-/*    transition: border 0.3s ease-in-out;*/
-/*}*/
+}
 
-/*.button {*/
-/*    padding: 10px 20px;*/
-/*    background: #007bff;*/
-/*    color: white;*/
-/*    border: none;*/
-/*    border-radius: 8px;*/
-/*    cursor: pointer;*/
-/*    font-size: 14px;*/
-/*    font-weight: bold;*/
-/*    transition: background 0.3s ease-in-out, transform 0.1s;*/
-/*}*/
+.textarea {
+    width: 100%;
+    min-height: 40px;
+    background-color: #F5F7FB;
+    border-radius: 20px;
+    padding: 12px 14px;
+    color: rgba(0, 0, 0, 0.6);
+    font-size: 14px;
+    font-weight: 400;
+    outline: none;
+    overflow: hidden;
+    resize: none;
+    border: none;
+}
 
-/*.button:hover {*/
-/*    background: #0056b3;*/
-/*}*/
-/*.button:active {*/
-/*    background: #004099;*/
-/*    transform: scale(0.95);*/
-/*}*/
+.button {
+    width: 120px;
+    height: 40px;
+    border-radius: 20px;
+    background-color: #0066CC;
+    cursor: pointer;
+    text-align: center;
+    outline: none;
+    border: none;
+    color: rgba(255, 255, 255, 1);
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.button:hover {
+    background-color: #3e82c7;
+
+
+}
+.button:active {
+    background-color: #0255a7;
+}
