--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -1,61 +1,72 @@
-/*.friendMessage {*/
-/*    display: flex;*/
-/*    flex-direction: row-reverse;*/
-/*    align-items: flex-start;*/
-/*    margin: 10px 0;*/
-/*}*/
+.friendMessage {
+    /* background-color: rgb(200, 169, 230); */
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 100%;
+    /* padding: 0 70px; */
+}
 
-/*.friendImageAndText {*/
-/*    display: flex;*/
-/*    flex-direction: row-reverse;*/
-/*    align-items: center;*/
-/*}*/
+.friendImageAndText {
+    display: flex;
+    align-items: flex-end;
+    gap: 15px;
 
-/*.friendImageAndText img {*/
-/*    width: 50px;*/
-/*    height: 50px;*/
-/*    border-radius: 50%;*/
-/*    object-fit: cover;*/
-/*    border: 2px solid #ccc;*/
-/*    margin-left: 10px;*/
-/*}*/
+}
 
-/*.friendText {*/
-/*    text-align: right; !* Выравнивание текста вправо *!*/
-/*    background-color: #e0e0e0; !* Светлый фон *!*/
-/*    padding: 10px;*/
-/*    border-radius: 10px;*/
-/*    max-width: 60%;*/
-/*}*/
+.friendImageAndText img {
+    height: 45px;
+}
 
-/*.friendText:after {*/
-/*    content: '';*/
-/*    position: absolute;*/
-/*    top: 10px;*/
-/*    right: -10px;*/
-/*    width: 0;*/
-/*    height: 0;*/
-/*    border-left: 10px solid #e0e0e0;*/
-/*    border-top: 5px solid transparent;*/
-/*    border-bottom: 5px solid transparent;*/
-/*}*/
+.friendText {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    width: fit-content;
+    max-width: 45%;
+    min-height: 60px;
+    background-color: #F5F7FB;
+    border-radius: 10px;
+    padding: 8px 15px;
 
-/*.friendName {*/
-/*    font-weight: bold;*/
-/*    color: #333;*/
-/*    margin-bottom: 5px;*/
-/*}*/
+}
 
-/*.friendMessageText {*/
-/*    font-size: 14px;*/
-/*    color: #444;*/
-/*    white-space: normal;*/
-/*    word-wrap: break-word;*/
-/*}*/
+.friendText:after {
+    content: '';
+    position: absolute;
+    border-top: 20px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 25px solid rgba(245, 247, 251, 1);
+    border-left: 30px solid transparent;
+    bottom: 0px;
+    left: -23px;
 
-/*.friendTime {*/
-/*    font-size: 12px;*/
-/*    color: gray;*/
-/*    align-self: flex-end;*/
-/*    margin-right: 10px;*/
-/*}*/
+}
+
+.friendName {
+    font-size: 16px;
+    font-weight: 600;
+    color: #000000;
+
+}
+
+.friendMessageText {
+    font-size: 16px;
+    font-weight: 400;
+    color: #000000;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+
+}
+
+.friendTime {
+    font-size: 10px;
+    font-weight: 600;
+    color: #000000;
+    margin-top: 5px;
+    display: inline-block;
+    padding: 0 7px;
+
+}
